--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "prisma": "^4.13.0"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
